crates/sgf-core/tests/snapshots/ops_lane_lengths/normalise_lane_length_788_760.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Normalised lane Raprix #788 <-> Kachada #760 length from 20.70131 to 20 (2 entries)
touched: [760, 788]
inverse: SetLaneLength { a: 788, b: 760, length: 20.70131 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -80577,7 +80577,7 @@
  
 			{
 				to=788
-				length=20.70131
+				length=20
 			}
  
 		}
@@ -82393,7 +82393,7 @@
 			
 			{
 				to=760
-				length=20.70131
+				length=20
 			}
  
 		}
